changed to food finder

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,66 +1,134 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <% include ../partials/header.ejs %>
-</head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Food Finder</title>
+  <style>
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        background-color: #bd3743;
+      }
+      #map {
+        display: none;
+      }
+      #logo {
+        font-family: 'Pacifico', cursive;
+        margin-left: 14px;
+        color: white;
+        font-size: 45px;
+        text-shadow: 2px 2px 5px black;
+        transform: rotate(-7deg);
+      }
+      #header {
+        background-image: linear-gradient(174deg, #ec819a, #bd3743 60%, #bd3743);
+        width: 100%;
+        height: 150px;
+      }
+      p {
+        margin-top: 0px;
+      }
+      #statusBar {
+        color: white;
+        font-family: "Poppins", sans-serif;
+        font-size: 16px;
+        margin: 0px 10px 0px 20px;
+      }
+      #resultsContainer {
+        color: white;
+        font-family: "Poppins", sans-serif;
+        font-size: 16px;
+        margin: 5px 10px 30px 35px;
+      }
 
-<body>
-
-  <% include ../partials/nav.ejs %>
-
-<div class="jumbotron text-center">
-  <div class="container">
-    <a href="/" class="lang-logo">
-      <img src="/lang-logo.png">
-    </a>
-    <h1>Getting Started with Node on Heroku</h1>
-    <p>This is a sample Node application deployed to Heroku. It's a reasonably simple app - but a good foundation for understanding how to get the most out of the Heroku platform.</p>
-    <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-nodejs"><span class="glyphicon glyphicon-flash"></span> Getting Started with Node</a>
-    <a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/node-js-getting-started"><span class="glyphicon glyphicon-download"></span> Source on GitHub</a>
-  </div>
-</div>
-<div class="container">
-  <div class="alert alert-info text-center" role="alert">
-    To deploy your own copy, and learn the fundamentals of the Heroku platform, head over to the <a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs" class="alert-link">Getting Started with Node on Heroku</a> tutorial.
-  </div>
-  <hr>
-  <div class="row">
-    <div class="col-md-6">
-      <h3><span class="glyphicon glyphicon-info-sign"></span> How this sample app works</h3>
-      <ul>
-        <li>This app was deployed to Heroku, either using Git or by using <a href="https://github.com/heroku/node-js-getting-started">Heroku Button</a> on the repository.</li>
-
-        <li>When Heroku received the source code, it fetched all the dependencies in the <a href="https://github.com/heroku/node-js-getting-started/blob/master/package.json">package.json</a>, creating a deployable slug.</li>
-        <li>The platform then spins up a dyno, a lightweight container that provides an isolated environment in which the slug can be mounted and executed.</li>
-        <li>You can scale your app, manage it, and deploy over <a href="https://addons.heroku.com/">150 add-on services</a>, from the Dashboard or CLI.</li>
-      </ul>
+    </style>
+  </head>
+  <body>
+    <div id="header">
+      <div id="logo">
+        <p>Food Finder</p>
+      </div>
     </div>
-    <div class="col-md-6">
-      <h3><span class="glyphicon glyphicon-link"></span> Next Steps</h3>
-      <ul>
-        <li>If you are following the <a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs">Getting Started</a> guide, then please head back to the tutorial and follow the next steps!</li>
-        <li>If you deployed this app by deploying the Heroku Button, then in a command line shell, run:</li>
-        <ul>
-          <li><code>git clone https://github.com/heroku/node-js-getting-started.git</code> - this will create a local copy of the source code for the app</li>
-          <li><code>cd node-js-getting-started</code> - change directory into the local source code repository</li>
-          <li><code>heroku git:remote -a &lt;your-app-name></code> - associate the Heroku app with the repository</li>
-          <li>You'll now be set up to run the app locally, or <a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs#push-local-changes">deploy changes</a> to Heroku</li>
-        </ul>
-      </ul>
-      <h3><span class="glyphicon glyphicon-link"></span> Helpful Links</h3>
-      <ul>
-        <li><a href="https://www.heroku.com/home">Heroku</a></li>
-        <li><a href="https://devcenter.heroku.com/">Heroku Dev Center</a></li>
-        <li><a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs">Getting Started with Node on Heroku</a></li>
-        <li><a href="https://devcenter.heroku.com/articles/deploying-nodejs">Deploying Node Apps on Heroku</a></li>
-      </ul>
-    </div>
-  </div> <!-- row -->
-   <div class="alert alert-info text-center" role="alert">
-    Please do work through the Getting Started guide, even if you do know how to build such an application.  The guide covers the basics of working with Heroku, and will familiarize you with all the concepts you need in order to build and deploy your own apps.
-  </div>
-</div>
+    <div id="statusBar"></div>
+    <div id="map"></div>
+    <div id="resultsContainer"></div>
 
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOYuaBDZ5cPbh7RzWAFoHBYq1YZbYPK4A&libraries=places&callback=initialize"async defer>
+      </script>
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js">
+        </script>
+        <link href="https://fonts.googleapis.com/css?family=Poppins|Pacifico" rel="stylesheet">
 
+    <script>
+
+      var map;
+      var service;
+      var foodFinder;
+      var results;
+
+      function initialize() {
+        var wellington = new google.maps.LatLng(0,0);
+        map = new google.maps.Map(document.getElementById('map'), {
+            center: wellington,
+            zoom: 15
+          });
+
+        $("#statusBar").html("Finding food near you. (400 meter radius)...")
+      }
+
+      // Called by geolocation 'getCurrentPosition()' below...
+      function setPosition(position) {
+        var coords = position.coords;
+        var posLat = coords.latitude;
+        var posLng = coords.longitude;
+        //sets coordinate pair in 'foodFinder'
+        foodFinder = new google.maps.LatLng(posLat, posLng)
+        $("#statusBar").html("You are at LAT:" + posLat.toFixed(3) + ", LONG:" + posLng.toFixed(3));
+        makeRequest();
+      }
+
+      function makeRequest() {
+        var request = {
+          location: foodFinder,
+          radius: '400',
+          types: ['restaurant']
+        };
+
+        service = new google.maps.places.PlacesService(map);
+        service.nearbySearch(request, callback);
+      }
+
+      // Callback function from Places API. Gets results, creates DIV elements for each
+      function callback(results, status) {
+        if (status == google.maps.places.PlacesServiceStatus.OK) {
+          for (var i = 0; i < results.length; i++) {
+            var place = results[i];
+            // console.log(place.name);
+            var thisResult = "result" + i;
+            var resultDiv = $("<div/>").attr({
+              id: thisResult
+            }).text(place.name);
+            $(document.getElementById("resultsContainer")).append("</br>");
+            $(document.getElementById("resultsContainer")).append(resultDiv);
+          }
+        }
+      }
+
+      // Checks browser support for geolocation, then gets position
+      // and calls 'setPosition' function
+      if (typeof navigator.geolocation != "undefined") {
+        navigator.geolocation.getCurrentPosition(setPosition, geoError);
+      } else {
+        alert("This page uses geolocation, and your " +
+              "browser doesn't support it.");
+      }
+
+      function geoError(errorObj) {
+        console.log(errorObj.message);
+      }
+
+    </script>
 </body>
 </html>
