--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -85,7 +85,8 @@
         var posLng = coords.longitude;
         //sets coordinate pair in 'foodFinder'
         foodFinder = new google.maps.LatLng(posLat, posLng)
-        $("#statusBar").html("You are at LAT:" + posLat.toFixed(3) + ", LONG:" + posLng.toFixed(3));
+        //$("#statusBar").html("You are at LAT:" + posLat.toFixed(3) + ", LONG:" + posLng.toFixed(3));
+        &("#statusBar").html("Here are all of the restaurants near you:" + "<br/>");
         makeRequest();
       }
 
