fixed typo in last commit

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -86,7 +86,7 @@
         //sets coordinate pair in 'foodFinder'
         foodFinder = new google.maps.LatLng(posLat, posLng)
         //$("#statusBar").html("You are at LAT:" + posLat.toFixed(3) + ", LONG:" + posLng.toFixed(3));
-        &("#statusBar").html("Here are all of the restaurants near you:" + "<br/>");
+        $("#statusBar").html("Here are all of the restaurants near you:" + "<br/>");
         makeRequest();
       }
 
