--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -120,7 +120,7 @@
       // Checks browser support for geolocation, then gets position
       // and calls 'setPosition' function
       if (typeof navigator.geolocation != "undefined") {
-        navigator.geolocation.getCurrentPosition(setPosition, geoError);
+        $(document).ready(navigator.geolocation.getCurrentPosition(setPosition, geoError));
       } else {
         alert("This page uses geolocation, and your " +
               "browser doesn't support it.");
