--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -17,7 +17,7 @@
   <div id="map"></div>
   <div id="resultsContainer"></div>
 
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOYuaBDZ5cPbh7RzWAFoHBYq1YZbYPK4A&libraries=places&callback=initialize" async defer>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOYuaBDZ5cPbh7RzWAFoHBYq1YZbYPK4A&libraries=places&callback=initialize" async defer>
     </script>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js">
       </script>
