got stylesheets working

--- a/views/pages/async.ejs
+++ b/views/pages/async.ejs
@@ -2,8 +2,43 @@
 <html lang=en>
 <head>
   <% include ../partials/async-head.ejs %>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href=" ../public/css/asyncstyle.css">
 </head>
 <body>
   <p>Hello World.</p>
+  <script>
+    //Demomstration of Asynchronous Javascript with Promises (ES6).
+    //From ES6 text: Nicholas Zakas 'Understanding ECMASCRIPT 6"
+    let fs = require("fs");
+
+    function readFile(filename) {
+      return new Promise( function (resolve, reject) {
+        // trigger the asynchronous operation
+        fs.readFile(filename, { encoding: "utf8" }, function(err, contents) {
+            // check for errors
+            if (err) {
+              reject(err);
+              return;
+            }
+
+            // the read succeeded
+            resolve(contents);
+        });
+      });
+    }
+
+    let promise = readFile("async/example.txt");
+
+    // listen for both fulfillment and rejection
+    promise.then(function(contents) {
+      // fulfillment
+      console.log("Fulfillment: " + "<br/>");
+      console.log(contents);
+    }, function(err) {
+      // rejection
+      console.log("Rejection:");
+      console.error(err.message);
+    });
+
+  </script>
 </body>
