--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Food Finder</title>
   <% include ../partials/favicons.ejs %>
-  <link rel="stylesheet" href="/stylesheets/styles.css" type="text/css">
+  <link rel="stylesheet" href="/css/foodfinderstyle.css" type="text/css">
 </head>
 <body>
   <div id="header">
