--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,4 +6,10 @@
   <title>Food Finder</title>
   <% include ../partials/favicons.ejs %>
   <link rel="stylesheet" href="/css/foodfinderstyle.css" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Poppins|Pacifico" rel="stylesheet">
+  <!-- jQuery 3.2.1 !-->
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.js"
+  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+  crossorigin="anonymous"></script>
 </head>
