--- a/public/css/foodfinderstyle.css
+++ b/public/css/foodfinderstyle.css
@@ -36,9 +36,12 @@
       font-size: 16px;
       margin: 5px 10px 30px 35px;
     }
+    .result {
+      text-decoration: underline;
+    }
     .detail {
       display: none;
-      margin-left: 40px;
+      margin-left: 20px;
       font-size: 14px;
     }
     .detailShow {
