--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Food Finder</title>
   <% include ../partials/favicons.ejs %>
-  <link rel="stylesheet" href="/css/foodfinderstyle.css" type="text/css">
+  <link rel="stylesheet" href="/css/style.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Poppins|Pacifico" rel="stylesheet">
   <!-- jQuery 3.2.1 !-->
   <script
