--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,7 +31,26 @@
       color: white;
       font-family: "Poppins", sans-serif;
       font-size: 16px;
-      margin: 10px 10px 10px 35px;
+      margin: 0px 0px 0px 35px;
+    }
+    .btn {
+      color: black;
+      border: none;
+      border-radius: 3px;
+      box-shadow: 0 4px #040;
+    }
+    .btn:active {
+      background-color: #aaa;
+      transform: translateY(3px);
+      box-shadow: none;
+    }
+    .refresh {
+      position: relative;
+      top: -30px;
+      left: 280px;
+      width: 40px;
+      height: 40px;
+      font-size: 30px;
     }
     .result {
       text-decoration: underline;
